tests/NormalTests/paczka1/small_fuzzy/96451603.err
Error in line 5: EaYk3V0 S381 43,5
Error in line 1: ol3 A46 28,1
